fix robolectric tests